// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SaveBar should render save bar COMPLETED 1`] = `
<div
  className="sc-bwzfXH gWHEGL save-bar"
>
  <div
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={100}
    className="linear sc-bxivhb gwvjKI"
    data-react-toolbox="progress-bar"
  >
    <div>
      <span
        data-ref="buffer"
        style={
          {
            "MsTransform": "scaleX(0)",
            "WebkitTransform": "scaleX(0)",
            "transform": "scaleX(0)",
          }
        }
      />
      <span
        className="value"
        data-ref="value"
        style={
          {
            "MsTransform": "scaleX(1)",
            "WebkitTransform": "scaleX(1)",
            "transform": "scaleX(1)",
          }
        }
      />
    </div>
  </div>
  <div
    className="sc-htpNat fHEvbJ"
  >
    SAVED
  </div>
  <div
    className="sc-bdVaJa fjuuc"
  />
</div>
`;

exports[`SaveBar should render save bar FAILED 1`] = `
<div
  className="sc-bwzfXH gWHEGL save-bar"
>
  <div
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={100}
    className="linear sc-bxivhb lgwOhK"
    data-react-toolbox="progress-bar"
  >
    <div>
      <span
        data-ref="buffer"
        style={
          {
            "MsTransform": "scaleX(0)",
            "WebkitTransform": "scaleX(0)",
            "transform": "scaleX(0)",
          }
        }
      />
      <span
        className="value"
        data-ref="value"
        style={
          {
            "MsTransform": "scaleX(1)",
            "WebkitTransform": "scaleX(1)",
            "transform": "scaleX(1)",
          }
        }
      />
    </div>
  </div>
  <div
    className="sc-htpNat jvZXLN"
  >
    SAVE FAILED
  </div>
  <div
    className="sc-bdVaJa fjuuc"
  />
</div>
`;

exports[`SaveBar should render save bar IN_PROGRESS 1`] = `
<div
  className="sc-bwzfXH gWHEGL save-bar"
>
  <div
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={100}
    className="linear sc-bxivhb ffWBwO"
    data-react-toolbox="progress-bar"
  >
    <div>
      <span
        data-ref="buffer"
      />
      <span
        className="value"
        data-ref="value"
      />
    </div>
  </div>
  <div
    className="sc-htpNat geZvSa"
  >
    SAVING
  </div>
  <div
    className="sc-bdVaJa fjuuc"
  />
</div>
`;
